--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/back"
     android:orientation="vertical">
 
+
     <LinearLayout
     android:layout_marginTop="150dp"
     android:layout_width="wrap_content"
@@ -21,32 +22,51 @@
         android:background="@color/white"
         android:layout_marginEnd="40dp"
         app:cardCornerRadius="40dp"
-        android:elevation="6dp"
+
         >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+
                 android:fontFamily="sans-serif-light"
                 android:text="Humidity"
                 android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="30dp"
+
+               >
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loadinghumidity"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    app:lottie_loop="true"
+                    app:lottie_fileName="loading.json"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+                    >
+
+                </com.airbnb.lottie.LottieAnimationView>
                 <TextView
                     android:id="@+id/humidity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="72BPI"
+                    android:visibility="gone"
+                    android:textSize="20dp"
+                    android:text=""
                     ></TextView>
             </LinearLayout>
         </LinearLayout>
@@ -135,12 +155,6 @@
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-    <Button
-        android:id="@+id/check"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
 
 
 </LinearLayout>
