--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/back"
     android:orientation="vertical">
-
-
     <LinearLayout
-    android:layout_marginTop="150dp"
-    android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:layout_marginTop="150dp">
+
     <androidx.cardview.widget.CardView
-        android:layout_width="150dp"
-        android:layout_marginStart="35dp"
-        android:layout_height="150dp"
+        android:layout_width="400dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_height="110dp"
         android:background="@color/white"
-        android:layout_marginEnd="40dp"
-        app:cardCornerRadius="40dp"
+        android:elevation="150dp"
+        card_view:cardUseCompatPadding="true"
+        app:cardCornerRadius="20dp"
+
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:fontFamily="sans-serif-light"
+                android:text="Heart Rate"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+
+               >
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loadinghr"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    app:lottie_loop="true"
+                    app:lottie_fileName="loading.json"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+                    >
+
+                </com.airbnb.lottie.LottieAnimationView>
+                <TextView
+                    android:id="@+id/heartrate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:textSize="20dp"
+                    android:text=""
+                    ></TextView>
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="400dp"
+        android:layout_gravity="center"
+
+        android:layout_height="110dp"
+        android:background="@color/white"
+        android:elevation="150dp"
+        card_view:cardUseCompatPadding="true"
+        app:cardCornerRadius="20dp"
+
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:fontFamily="sans-serif-light"
+                android:text="Pulse"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+
+                >
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loadingpulse"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    app:lottie_loop="true"
+                    app:lottie_fileName="loading.json"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+                    >
+
+                </com.airbnb.lottie.LottieAnimationView>
+                <TextView
+                    android:id="@+id/pulse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:textSize="20dp"
+                    android:text=""
+                    ></TextView>
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="400dp"
+        android:layout_gravity="center"
+
+        android:layout_height="110dp"
+        android:background="@color/white"
+        android:elevation="150dp"
+        card_view:cardUseCompatPadding="true"
+        app:cardCornerRadius="20dp"
+
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:fontFamily="sans-serif-light"
+                android:text="Temperature"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+
+                >
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loadingtemperature"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    app:lottie_loop="true"
+                    app:lottie_fileName="loading.json"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+                    >
+
+                </com.airbnb.lottie.LottieAnimationView>
+                <TextView
+                    android:id="@+id/temperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:textSize="20dp"
+                    android:text=""
+                    ></TextView>
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="400dp"
+        android:layout_gravity="center"
+
+        android:layout_height="110dp"
+        android:background="@color/white"
+        android:elevation="150dp"
+        card_view:cardUseCompatPadding="true"
+        app:cardCornerRadius="20dp"
 
         >
 
@@ -45,7 +229,7 @@
                 android:orientation="vertical"
                 android:layout_marginTop="30dp"
 
-               >
+                >
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/loadinghumidity"
@@ -73,88 +257,13 @@
 
     </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@color/white"
-            android:layout_marginEnd="40dp"
-            app:cardCornerRadius="40dp"
-            android:elevation="6dp"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pulse Rate"
-                    android:textSize="20dp"
-                    android:layout_gravity="center"
-                    android:fontFamily="sans-serif-light"
-                    />
-            </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
-</LinearLayout>
-    <LinearLayout
-        android:layout_marginTop="80dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_marginStart="35dp"
-            android:layout_height="150dp"
-            android:background="@color/white"
-            android:layout_marginEnd="40dp"
-            app:cardCornerRadius="40dp"
-            android:elevation="6dp"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_marginTop="8dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Heart Rate"
-                    android:textSize="18dp"
-                    android:layout_gravity="center"
-                    android:fontFamily="sans-serif-light"
-                    />
-            </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:background="@color/white"
-            android:layout_marginEnd="40dp"
-            app:cardCornerRadius="40dp"
-            android:elevation="6dp"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Body Temperature"
-                    android:textSize="15dp"
-                    android:layout_gravity="center"
-                    android:fontFamily="sans-serif-light"
-
-                    />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
 
 
 </LinearLayout>
+</LinearLayout>
+
+
+
+
