--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,106 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/back"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
+    <ImageView
+        android:id="@+id/action_bar_forward"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="end"
+        android:src="@drawable/three"
+        android:layout_marginTop="5dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="120dp"
+        android:orientation="horizontal"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:cardCornerRadius="100dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/patient"></ImageView>
+
+
+        </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Patient Name : "></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:textSize="20sp"
+            android:text="Piyush"></TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Monitored By : "></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20sp"
+                    android:text="DR.Vishnu"></TextView>
+                <ImageButton
+                    android:id="@+id/calldoc"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_call_black_24dp"
+                    android:background="@android:color/transparent"
+                    ></ImageButton>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:layout_marginTop="150dp">
+    >
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/heartcardview"
         android:layout_width="400dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_height="110dp"
         android:background="@color/white"
-        android:elevation="150dp"
+        android:elevation="200dp"
         card_view:cardUseCompatPadding="true"
         app:cardCornerRadius="20dp"
 
@@ -46,13 +126,16 @@
                 android:text="Heart Rate"
                 android:textSize="20dp" />
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
 
                >
+
+
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/loadinghr"
@@ -61,7 +144,8 @@
                     android:layout_gravity="center"
                     app:lottie_loop="true"
                     app:lottie_fileName="loading.json"
-                    android:visibility="visible"
+                    android:layout_marginLeft="170dp"
+
                     app:lottie_autoPlay="true"
                     >
 
@@ -71,10 +155,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:visibility="gone"
+                    android:layout_marginLeft="170dp"
                     android:textSize="20dp"
-                    android:text=""
+
                     ></TextView>
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:lottie_loop="true"
+
+                    app:lottie_fileName="heart.json"
+                    android:visibility="visible"
+                    app:lottie_autoPlay="true"
+
+                    ></com.airbnb.lottie.LottieAnimationView>
             </LinearLayout>
         </LinearLayout>
 
@@ -108,7 +202,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
 
                 >
@@ -120,6 +214,7 @@
                     android:layout_gravity="center"
                     app:lottie_loop="true"
                     app:lottie_fileName="loading.json"
+                    android:layout_marginLeft="170dp"
                     android:visibility="visible"
                     app:lottie_autoPlay="true"
                     >
@@ -132,6 +227,7 @@
                     android:layout_gravity="center"
                     android:visibility="gone"
                     android:textSize="20dp"
+                    android:layout_marginLeft="170dp"
                     android:text=""
                     ></TextView>
             </LinearLayout>
@@ -167,7 +263,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
 
                 >
@@ -180,6 +276,7 @@
                     app:lottie_loop="true"
                     app:lottie_fileName="loading.json"
                     android:visibility="visible"
+                    android:layout_marginLeft="170dp"
                     app:lottie_autoPlay="true"
                     >
 
@@ -191,8 +288,10 @@
                     android:layout_gravity="center"
                     android:visibility="gone"
                     android:textSize="20dp"
+                    android:layout_marginLeft="170dp"
                     android:text=""
                     ></TextView>
+
             </LinearLayout>
         </LinearLayout>
 
@@ -226,8 +325,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="30dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
 
                 >
 
@@ -237,6 +336,7 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     app:lottie_loop="true"
+                    android:layout_marginLeft="170dp"
                     app:lottie_fileName="loading.json"
                     android:visibility="visible"
                     app:lottie_autoPlay="true"
@@ -250,6 +350,7 @@
                     android:layout_gravity="center"
                     android:visibility="gone"
                     android:textSize="20dp"
+                    android:layout_marginLeft="170dp"
                     android:text=""
                     ></TextView>
             </LinearLayout>
@@ -262,6 +363,18 @@
 
 
 </LinearLayout>
+<com.google.android.material.bottomnavigation.BottomNavigationView
+    android:layout_marginTop="30dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:menu="@menu/bottom_navigation_bar"
+    app:itemIconTint="@color/white"
+    app:itemTextColor="@color/white"
+
+    >
+
+</com.google.android.material.bottomnavigation.BottomNavigationView>
+
 </LinearLayout>
 
 
