--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/username"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/boxuname"
@@ -88,6 +89,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:background="@drawable/boxuname"
@@ -103,6 +105,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/inputbox"
